--- a/_includes/layouts/desktop/projects.html
+++ b/_includes/layouts/desktop/projects.html
@@ -1,4 +1,4 @@
-<section class="projects-section">
+<section class="projects-section desktop-section">
   <section class="projects-list-section">
     <h2 class="section-title">Projects</h2>
     <div class="w-full mt-4 projects-grid">
