--- a/_includes/layouts/desktop/publications.html
+++ b/_includes/layouts/desktop/publications.html
@@ -1,4 +1,4 @@
-<section class="publications-section">
+<section class="publications-section desktop-section">
   <section class="projects-list-section">
     <!-- title -->
     <h2 class="section-title">Publications</h2>
