--- a/_includes/layouts/mobile/profile.html
+++ b/_includes/layouts/mobile/profile.html
@@ -4,7 +4,7 @@
         <div class="profile-info">
             <div class="profile-text">
                 <div class="profile-name">emran poh</div>
-                <div class="profile-title">smu hai+hci phd student</div>
+                <div class="profile-title">hai+hci PhD student</div>
                 <div class="profile-email">emranpoh [at] smu.edu.sg</div>
             </div>
             <div class="header-icons mobile-only">
