--- a/_includes/layouts/desktop/news.html
+++ b/_includes/layouts/desktop/news.html
@@ -1,4 +1,4 @@
-<div class="news-desktop-section">
+<div class="news-desktop-section desktop-section">
     <div class="section-header">
         <h2 class="section-title">what's new? <span class="emoji">✨</span></h2>
     </div>
